--- a/twitoff/templates/user.html
+++ b/twitoff/templates/user.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="user-info">
-  <h2>{{ title }}</h2>
+  <h2>User: {{ title }}</h2>
   <p>{{ message }}</p>
-</div>
-<div id="user-tweets">
   {% for tweet in tweets %}
-  <span class="stack">{{ tweet.text }}</span>
+  <span class="stack"><li>{{ tweet.id }} - {{ tweet.text }}</li></span>
   {% endfor %}
 </div>
 {% endblock %}
